--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity android:name="Main">
+        android:theme="@android:style/Theme.Holo" >
+        <activity 
+            android:name="Main"
+            android:launchMode="singleInstance">
             <intent-filter>
         		<action android:name="android.intent.action.MAIN" />
         		<category android:name="android.intent.category.LAUNCHER" />
