--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -14,13 +14,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo" >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".RoomsActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleInstance">
+            android:name=".Main"
+            android:launchMode="singleInstance"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
