fix udp packages

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.luxoftlab.shareclipboard" >
 
-    <uses-sdk
-        android:minSdkVersion="11" />
+    <uses-sdk android:minSdkVersion="11" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -15,17 +14,18 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Main"
-            android:launchMode="singleInstance"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service
-            android:name="Controller"
-            android:process=":remote">
+            android:name=".Controller"
+            android:process=":remote" >
         </service>
     </application>
 
